--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
   },
   "homepage": "https://github.com/dominikfiala/stromydomyzlana-cz",
   "devDependencies": {
-    "bootstrap": "^3.3.6"
+    "grunt": "^0.4.5",
+    "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-favicons": "^0.7.0",
+    "grunt-newer": "^1.1.1",
+    "less": "^2.5.3",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-clean-css": "^1.5.1",
+    "livereload-js": "^2.2.2",
+    "load-grunt-tasks": "^3.4.0",
+    "normalize.css": "^3.0.3",
+    "time-grunt": "^1.3.0"
   }
 }
